# Rust_rocket_tg

./: .env.example  .envrc  .gitignore  README.md  boost_manager.py  leaderboard.py  pyproject.toml  reminder.py  requirements.txt  secure_env_setup.sh  shieldy_config.json
.github/workflows/: ci.yml  release.yml
ads/queue/: sample_campaign.yaml
content/done/: sample_post.md
content/queue/: welcome_post.md
data/: admin_chat_id.txt
docker/: Dockerfile  cron.sample
rustrocket_tg/: __init__.py  cli.py  config.py
rustrocket_tg/commands/: __init__.py  ads_manager.py  boost_manager.py  create_admin_log.py  leaderboard.py  moderation_guard.py  post_scheduler.py  reminder.py  story_uploader.py
rustrocket_tg/utils/: __init__.py  logger.py  telegram.py
rustrocket_x/: __init__.py  __main__.py  cli.py  config.py  metrics.py
rustrocket_x/commands/: __init__.py  ads_manager.py  create_admin_log.py  leaderboard.py  moderation_guard.py  post_scheduler.py
rustrocket_x/utils/: logger.py  telegram.py
tests/: __init__.py  test_cli.py  test_create_admin_log.py  test_post_scheduler.py
